# materialsystem

./: CMakeLists.txt  Makefile_cmaterialsystem  Makefile_materialsystem  README.md  build_cmaterialsystem.sh  build_materialsystem.sh  materialsystem.sln
.github/workflows/: pragma-generic-ci.yml  (+2 more)
cmaterialsystem/: CMakeLists.txt  cmaterialsystem.vcxproj  cmaterialsystem.vcxproj.filters
cmaterialsystem/include/: c_source2_vmat_format_handler.hpp  c_source_vmt_format_handler.hpp  cmaterial.h  cmaterial_manager2.hpp  cmaterialmanager.h  cmatsysdefinitions.h  material_descriptor_array.hpp  sprite_sheet_animation.hpp  virtualfile.h
cmaterialsystem/include/shaders/: c_shader_decompose_cornea.hpp  c_shader_extract_image_channel.hpp  c_shader_ssbumpmap_to_normalmap.hpp
cmaterialsystem/include/shaders/source2/: c_shader_decompose_metalness_reflectance.hpp  c_shader_decompose_pbr.hpp  c_shader_generate_tangent_space_normal_map.hpp
cmaterialsystem/include/texturemanager/: loadimagedata.h  texture.h  texture_manager2.hpp  texturemanager.h  texturequeue.h
cmaterialsystem/include/texturemanager/load/: texture_format_handler.hpp  texture_load_job.hpp  texture_loader.hpp  texture_processor.hpp
cmaterialsystem/include/texturemanager/load/handlers/: format_handler_gli.hpp  format_handler_svg.hpp  format_handler_uimg.hpp  format_handler_vtex.hpp  format_handler_vtf.hpp
cmaterialsystem/src/: c_source2_vmat_format_handler.cpp  c_source_vmt_format_handler.cpp  c_source_vmt_format_handler_2.cpp  cmaterial.cpp  cmaterial_manager2.cpp  cmaterialmanager.cpp  cmaterialsystem.cpp  cmatsysdefinitions.hpp  definitions.hpp  gli_wrapper.cpp  gli_wrapper.hpp  material_descriptor_array.cpp  sprite_sheet_animation.cpp  virtualfile.cpp
cmaterialsystem/src/implementation/: material.cpp  material_descriptor_array.cpp  material_manager.cpp  material_manager2.cpp  sprite_sheet_animation.cpp
cmaterialsystem/src/implementation/format_handlers/: source2_vmat.cpp  source_vmt.cpp  source_vmt_2.cpp
cmaterialsystem/src/implementation/shaders/: decompose_cornea.cpp  extract_image_channel.cpp  ssbumpmap_to_normalmap.cpp
cmaterialsystem/src/implementation/shaders/source2/: decompose_metalness_reflectance.cpp  decompose_pbr.cpp  generate_tangent_space_normal_map.cpp
cmaterialsystem/src/implementation/source2/: vmat.cpp
cmaterialsystem/src/implementation/texture_manager/: load_image_data.cpp  manager.cpp  manager2.cpp  manager_initialize.cpp  manager_load.cpp  manager_thread.cpp  queue.cpp  texture.cpp
cmaterialsystem/src/implementation/texture_manager/load/: texture_format_handler.cpp  texture_loader.cpp  texture_processor.cpp
cmaterialsystem/src/implementation/texture_manager/load/handlers/: gli.cpp  svg.cpp  uimg.cpp  vtex.cpp  vtf.cpp
cmaterialsystem/src/interface/: cmaterialsystem.cppm  material.cppm  material_descriptor_array.cppm  material_manager.cppm  material_manager2.cppm  sprite_sheet_animation.cppm
cmaterialsystem/src/interface/format_handlers/: format_handlers.cppm  source2_vmat.cppm  source_vmt.cppm
cmaterialsystem/src/interface/shaders/: decompose_cornea.cppm  extract_image_channel.cppm  shaders.cppm  ssbumpmap_to_normalmap.cppm
cmaterialsystem/src/interface/shaders/source2/: decompose_metalness_reflectance.cppm  decompose_pbr.cppm  generate_tangent_space_normal_map.cppm
cmaterialsystem/src/interface/texture_manager/: load_image_data.cppm  manager.cppm  manager2.cppm  queue.cppm  texture.cppm  texture_manager.cppm
cmaterialsystem/src/interface/texture_manager/load/: texture_format_handler.cppm  texture_loader.cppm  texture_processor.cppm
cmaterialsystem/src/interface/texture_manager/load/format_handlers/: gli.cppm  svg.cppm  uimg.cppm  vtex.cppm  vtf.cppm
cmaterialsystem/src/shaders/: c_shader_decompose_cornea.cpp  c_shader_extract_image_channel.cpp  c_shader_ssbumpmap_to_normalmap.cpp
cmaterialsystem/src/shaders/source2/: c_shader_decompose_metalness_reflectance.cpp  c_shader_decompose_pbr.cpp  c_shader_generate_tangent_space_normal_map.cpp
cmaterialsystem/src/source2/: vmat.cpp
cmaterialsystem/src/texturemanager/: loadimagedata.cpp  texture_initialize.cpp  texture_load.cpp  texture_manager2.cpp  texture_thread.cpp  textureinfo.cpp  texturemanager.cpp  texturequeue.cpp
cmaterialsystem/src/texturemanager/load/: texture_format_handler.cpp  texture_load_job.cpp  texture_loader.cpp  texture_processor.cpp
cmaterialsystem/src/texturemanager/load/handlers/: format_handler_gli.cpp  format_handler_svg.cpp  format_handler_uimg.cpp  format_handler_vtex.cpp  format_handler_vtf.cpp
materialsystem/: CMakeLists.txt  materialsystem.vcxproj  materialsystem.vcxproj.filters  win_clang_exports.def
materialsystem/include/: detail_mode.hpp  impl_texture_formats.h  material.h  material_copy.hpp  material_manager2.hpp  material_property_block_view.hpp  materialmanager.h  matsysdefinitions.h  png_info.h  source2_vmat_format_handler.hpp  source_vmt_format_handler.hpp  texture_load_flags.hpp  texture_type.h  textureinfo.h  util_vmat.hpp  util_vmt.hpp
materialsystem/src/: definitions.hpp  detail_mode.cpp  impl_surfacematerials.h  impl_texture_formats.cpp  material.cpp  material_manager2.cpp  material_property_block_view.cpp  materialmanager.cpp  materialsystem.cpp  matsysdefinitions.hpp  png_info.cpp  source2_vmat_format_handler.cpp  source_vmt_format_handler.cpp  source_vmt_format_handler_2.cpp  textureinfo.cpp  vmat.cpp  vmt.cpp
materialsystem/src/implementation/: enums.cpp  impl_surfacematerials.h  material.cpp  material_manager.cpp  material_manager2.cpp  material_property_block_view.cpp  png_info.cpp  texture_info.cpp  util.cpp  vmat.cpp  vmt.cpp
materialsystem/src/implementation/format_handlers/: source2_vmat.cpp  source_vmt.cpp  source_vmt_2.cpp
materialsystem/src/interface/: enums.cppm  material.cppm  material_manager.cppm  material_manager2.cppm  material_property_block_view.cppm  materialsystem.cppm  png_info.cppm  texture_info.cppm  util.cppm  vmat.cppm  vmt.cppm
materialsystem/src/interface/format_handlers/: format_handlers.cppm  source2_vmat.cppm  source_vmt.cppm
